@@ -1,3 +1,15 @@
+2004-09-14  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (mcs-do-full-build): Pass NO_SIGN_ASSEMBLIES=yes to
+	reduce the number of passes.  We will get the assemblies signed in
+	the 'populate-runtime-subdir' phase.
+	(mcs-do-run-test-profiles): Rename from mcs-do-run-tests.  Use
+	'test-profiles' to test all profiles.
+	(mcs-do-compiler-tests): Use 'compiler-tests' target in mcs/.
+	(bootstrap-check): Update.
+	* runtime/Makefile.am ($(monoone_DATA) $(monotwo_DATA) $(monobins_DATA)): 
+	Simplify.
+
 2004-09-10  Zoltan Varga  <vargaz@freemail.hu>
 
 	* Makefile.am (populate-runtime-subdir): Avoid -path argument to find
